--- a/style.css
+++ b/style.css
@@ -5,29 +5,40 @@ body {
 }
 header {
 	background-color: #8f5331;
-	color: #fff;
+	color: #cfceb5;
+	text-align: center;
 	padding: 10px;
+	font-family: cursive;
 }
 h1 {
 	margin: 0;
 	font-size: 36px;
 }
 nav ul {
+	font-family: Arial, Helvetica, sans-serif;
 	margin: 0;
 	padding: 0;
 	list-style: none;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	
 }
 nav li {
 	margin-right: 20px;
+	
+	
 }
 nav a {
-	color: #fff;
+	color: #b1a579;
+	/*background-color: #012337;*/
+	border-color: #b1a579;
+	border-width: 20px;
+	padding: 8px;
 	text-decoration: none;
 	font-weight: bold;
 	font-size: 20px;
+	border-width: 20px;
 }
 main {
 	max-width: 800px;
@@ -42,8 +53,11 @@ ul {
 	margin-top: 20px;
 }
 footer {
-	background-color: #f2f2f2;
+	color: #fff;
 	padding: 10px;
 	text-align: center;
+	background-color: #8f5331;
+	bottom:0;
+	width:100%;
 }
  
